Version next

Version 2016.10.09.21b

Version 2016.07.16.21b
* Drop support for Firefox 44.0 and older.
* Fix location bar formatting support in Firefox 50.

Version 2015.11.16.23

Version 2015.10.10.15b
* Fix non-compliant usage of 'let' in Firefox 44 (Bugs 589199, 1202902)
* Rename preference names from status4evar.* to extensions.caligon.s4e.*
* Fix location bar progress padding in Firefox 42.

Version 2015.08.19.02b
* Drop support for Firefox 37.0 and older.
* Fix window.caligon.status4evar is undefined bugs.
* Improve fullscreen HTML5 video detection (fix on Google Drive). Support fullscreen iframe elements.
* Add e10s multi-process support for detecting fullscreen video.

Version 2015.07.14.22b
* Fix location bar formatting support in Firefox 42.

Version 2015.02.06.23
* Fix toolbar pop-up menu bugs by removing legacy Australis compatibility code that is no longer needed.
* Fix location bar origin label offset in Firefox 31 ESR.

Version 2015.01.31.02b
* Drop support for Firefox 30.0 and older. Unify Australis integration.
* Fix Downloads button icon in Firefox 35+.
* Improve Downloads button integration in Menu Panel.
* When the Downloads button is in the Menu panel, or overflow panel, show the download finished animation on the panel button.

Version 2014.07.06.05
* Fix location bar status interactions with domain highlighting.
* Fix origin link shift in Firefox 32 location bar.

Version 2014.06.29.16b
* Fix gripper styling on OS X (Australis)
* Fix Windows download button attention icon (Australis).
* Add throbber toolbar item (Australis).
* Updated translations for: bg-BG, da, de, dsb, el, eo, es-ES, fr, he, hsb, ja-JP, nb-NO, nl, pl, ro, sr, sv-SE, tr, zh-CN, zh-TW

Version 2014.06.01.03b
* Fix download status implementation to be compatible with Firefox 29.
* Fix localization issues. (Australis)
* Improved customization event handling. (Australis)
* Support opening download manager with in-tab UI.