@@ -1,0 +1,22 @@
+/*
+ * ***** BEGIN LICENSE BLOCK *****
+ * 
+ * This Source Code Form is subject to the terms of the Mozilla Public
+ * License, v. 2.0. If a copy of the MPL was not distributed with this
+ * file, You can obtain one at http://mozilla.org/MPL/2.0/.
+ * 
+ * Copyright (C) 2015 Matthew Turnbull <sparky@bluefang-logic.com>. All Rights Reserved.
+ * 
+ * ***** END LICENSE BLOCK *****
+ * 
+ * Original Add-on bar styling by Mozilla Foundation.
+ * Adapted from the back-out patch:
+ * https://hg.mozilla.org/mozilla-central/rev/dd59f8effb73
+*/
+
+@namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");
+
+#status4evar-throbber-widget[progress] image
+{
+	list-style-image: url("chrome://browser/skin/tabbrowser/loading.png");
+}
