@@ -1,6 +1,8 @@
 Version next
+* Fix throbber icon (Bug 750054).
 
 Version 2016.10.09.21b
+* Fix Firefox 49+ compatibility.
 
 Version 2016.07.16.21b
 * Drop support for Firefox 44.0 and older.
